tests/restrict-tenant-route-hostnames-delete/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: tenant-author
userInfo:
  username: system:serviceaccount:wedding-app:wedding-app
  groups:
    - system:serviceaccounts
    - system:authenticated
